removing checkmarks to verify positioning issue on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -241,7 +241,7 @@ main {
 }
 
 .solutions ul li {
-    position: relative;
+    /* position: relative; */
     background-color: rgb(20, 20, 20);
     border-radius: 25px;
     color: #fff;
@@ -257,7 +257,7 @@ main {
     margin-top: 1rem;
 }
 
-.checkmark {
+/* .checkmark {
     display: inline-flex;
     width: 1.375rem;
     height: 1.031rem;
@@ -282,7 +282,7 @@ main {
     background-color:rgba(0, 255, 170, 0.836);
     left: .5rem;
     top: 0.75rem;
-}
+} */
 
 /* Research ~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~-~ */
 
